--- a/Properties/Resources.zh-CN.resx
+++ b/Properties/Resources.zh-CN.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AutoStart" xml:space="preserve">
-    <value>Auto Start</value>
+    <value>开机自启动</value>
   </data>
   <data name="Exit" xml:space="preserve">
-    <value>Exit</value>
+    <value>退出</value>
   </data>
   <data name="IncognitoMode" xml:space="preserve">
-    <value>Incognito Mode</value>
+    <value>无痕模式</value>
   </data>
 </root>
