--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -117,13 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>About</value>
+  </data>
+  <data name="AboutDescription" xml:space="preserve">
+    <value>CleanRecentMini is a lightweight tool that helps you manage Windows Quick Access items and protect your privacy.</value>
+  </data>
+  <data name="AllRightsReserved" xml:space="preserve">
+    <value>All rights reserved.</value>
+  </data>
   <data name="AutoStart" xml:space="preserve">
     <value>Auto Start</value>
+  </data>
+  <data name="DevelopedBy" xml:space="preserve">
+    <value>Developed by</value>
   </data>
   <data name="Exit" xml:space="preserve">
     <value>Exit</value>
   </data>
   <data name="IncognitoMode" xml:space="preserve">
     <value>Incognito Mode</value>
+  </data>
+  <data name="Language" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="License" xml:space="preserve">
+    <value>License</value>
+  </data>
+  <data name="ProjectPage" xml:space="preserve">
+    <value>Project Page</value>
   </data>
 </root>
