--- a/Properties/Resources.zh-TW.resx
+++ b/Properties/Resources.zh-TW.resx
@@ -159,4 +159,7 @@
   <data name="Warning" xml:space="preserve">
     <value>警告</value>
   </data>
+  <data name="AlreadyRunning" xml:space="preserve">
+    <value>程式已在執行中</value>
+  </data>
 </root>
